--- a/client/style.css
+++ b/client/style.css
@@ -6,29 +6,29 @@ header,main,footer{
 body{
   font-family: Arial;
   padding: 10px;
-  background: #f1f1f1;
+  background: #F5f5f5;
 }
 .divhead{
     padding: 30px;
     text-align: center;
-    background: white;
-    font-size: 50px;
+    background: #F5f5f5;
+    font-size: 40px;
 }
 
 .upper{
     overflow: hidden;
-    background-color: #333;
+    background-color: #4D724D;
 }
 .upper a{
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #F5f5f5;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 .upper a:hover{
-    background-color: #ddd;
+    background-color: #8DB48E;
     color:black;
 }
 .leftcolumn {   
@@ -40,22 +40,33 @@ body{
 .rightcolumn {
   float: left;
   width: 25%;
-  background-color: #f1f1f1;
+  background-color: #F5f5f5;
   padding-left: 20px;
 }
 
 /* Fake image */
 .fakeimg {
-  background-color: #aaa;
-  /*width: 100%;*/
+  background-color: #8DB48E;
+  width: 90%;
   padding: 20px;
 }
 
 /* Add a card effect for articles */
 .card {
-  background-color: white;
+  background-color: #f5f5f5;
+  border-style: solid;
+  border-color: #535353;
   padding: 20px;
   margin-top: 20px;
+}
+
+div.incard{
+  display:grid;
+  grid-template-columns: 75% 20%;
+}
+
+div.cardinfo{
+  display: inline-block;
 }
 
 /* Clear floats after the columns */
@@ -65,11 +76,37 @@ body{
   clear: both;
 }
 
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #DD2A7B;
+  color: white;
+}
 /* Footer */
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: #4D724D;
   margin-top: 20px;
 }
 
