--- a/client/style.css
+++ b/client/style.css
@@ -47,8 +47,16 @@ body{
 /* Fake image */
 .fakeimg {
   background-color: #8DB48E;
-  width: 90%;
-  padding: 20px;
+  width: auto;
+  background-position: center;
+  border: 10px solid #8DB48E;
+ 
+}
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 /* Add a card effect for articles */
@@ -105,8 +113,40 @@ div.cardinfo{
 /* Footer */
 .footer {
   padding: 20px;
-  text-align: center;
   background: #4D724D;
   margin-top: 20px;
 }
 
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #4D724D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color:#8DB48E;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  padding: 20px;
+}
