--- a/client/style.css
+++ b/client/style.css
@@ -46,16 +46,18 @@ body{
 
 /* Fake image */
 .fakeimg {
-  background-color: #8DB48E;
+  
   width: auto;
-  background-position: center;
-  border: 10px solid #8DB48E;
+  /*background-position: center;
+  background-color: #8DB48E;
+  border: 10px solid #8DB48E;*/
  
 }
 img{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: 10px solid #8DB48E;
 
 }
 
